Fixed bugs, aligned chart labels

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ h3 {
 	width: 100%;
 	height: 100%;
 	display: flex;
-	height: 800px;
+	height: 900px;
 	justify-content: center;
 	align-items: center;
 	overflow-x: auto;
@@ -184,7 +184,7 @@ tr.mouseover.selected {
 
 .vis-holder {
 	width: 100%;
-	max-width: 1150px;
+	max-width: 1200px;
 	margin: auto;
   }
 
